crates/toml_edit/tests/fixtures/invalid/inline-table/overwrite.stderr
TOML parse error at line 3, column 1
  |
3 | a={}
  | ^
Duplicate key `a` in document root
